<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative_layout_container_activity_question_2"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="#009688"
    tools:context="com.iak.quizerexample.question.Question2Activity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_value_username_activity_question2"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_label_question_activity_question2"
        android:layout_below="@+id/text_view_value_username_activity_question2"
        android:text="Question 2"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_value_question_activity_question2"
        android:layout_below="@+id/text_view_label_question_activity_question2"
        android:layout_marginTop="8dp"
        android:text="@string/value_question_in_here"
        android:textColor="@android:color/white"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group_answer_question_activity_question2"
        android:layout_below="@+id/text_view_value_question_activity_question2"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_answer_1_activity_question2"
            android:text="@string/answer_1"
            android:textColor="@android:color/white"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_answer_2_activity_question2"
            android:text="@string/answer_2"
            android:textColor="@android:color/white"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_answer_3_activity_question2"
            android:text="@string/answer_3"
            android:textColor="@android:color/white"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_button_answer_4_activity_question2"
            android:text="@string/answer_4"
            android:textColor="@android:color/white"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_submit_activity_question2"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        />

</RelativeLayout>
